--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ansi-html": "0.0.7",
     "axios": "^0.21.4",
+    "immer": "^9.0.6",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.0.0-rc.3",
-    "styled-components": "^5.3.0",
+    "react-spring": "^9.3.0",
+    "set-value": "^4.1.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
